--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 </head>
 
 <body>
-  Docker for Brendon (owner of Marco) httpd zCloud example
+  Docker for Igor & Eduardo httpd zCloud example
 </body>
